--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.example.com"
+baseURL = "epsln.github.io"
 languageCode = "en-us"
 title = "epsilon dumblog"
 theme = "npq-hugo"
